@@ -1,4 +1,0 @@
-/* mips target configuration file.  */
-
-/* MIPS uses an unusual format for floating point quiet NaNs.  */
-#define SIM_QUIET_NAN_NEGATED
