@@ -1,5 +1,10 @@
 2015-12-24  Mike Frysinger  <vapier@gentoo.org>
 
+	* sim-main.h (SIM_QUIET_NAN_NEGATED): Move from tconfig.h.
+	* tconfig.h: Delete.
+
+2015-12-24  Mike Frysinger  <vapier@gentoo.org>
+
 	* tconfig.h (SIM_HANDLES_LMA): Delete.
 
 2015-12-24  Mike Frysinger  <vapier@gentoo.org>
